set(MSE_CPP_SRCS
	dev/cpu/alpha/axp.cpp
	dev/cpu/alpha/debug.cpp
	dev/cpu/alpha/ev5.cpp
	dev/cpu/alpha/ev5_pal.cpp
	dev/cpu/alpha/ev6.cpp
	dev/cpu/alpha/ev6_ipr.cpp
	dev/cpu/alpha/ev6_pal.cpp
	dev/cpu/alpha/execute.cpp
	dev/cpu/alpha/load.cpp
	dev/cpu/alpha/opcodes.cpp
	emu/map/addrmap.cpp
	emu/map/busmgr.cpp
	emu/map/heun.cpp
	emu/map/map.cpp
	emu/map/space.cpp
	emu/command.cpp
	emu/console.cpp
	emu/debug.cpp
	emu/delegate.cpp
	emu/device.cpp
	emu/devproc.cpp
	emu/devsys.cpp
	emu/dibus.cpp
	emu/didebug.cpp
	emu/diexec.cpp
	emu/engine.cpp
	emu/machine.cpp
	emu/sysconfig.cpp
	emu/syslist.cpp
	emu/systems.cpp
	main/main.cpp
	system/dec/axp/alphapc.cpp
	system/dec/axp/tsunami.cpp
	system/dec/vax/ka650.cpp
	system/dec/vax/ka655.cpp
)

set(MSE_H_SRCS
	dev/cpu/alpha/axp.h
	dev/cpu/alpha/axp_arith.h
	dev/cpu/alpha/axp_branch.h
	dev/cpu/alpha/axp_bwx.h
	dev/cpu/alpha/axp_logical.h
	dev/cpu/alpha/axp_mem.h
	dev/cpu/alpha/axp_misc.h
	dev/cpu/alpha/axp_pal.h
	dev/cpu/alpha/debug.h
	dev/cpu/alpha/ev5.h
	dev/cpu/alpha/ev5_ipr.h
	dev/cpu/alpha/ev6.h
	dev/cpu/alpha/ev6_ipr.h
	dev/cpu/alpha/opcode.h
	emu/map/addrmap.h
	emu/map/he.h
	emu/map/map.h
	emu/command.h
	emu/console.h
	emu/core.h
	emu/debug.h
	emu/delegate.h
	emu/device.h
	emu/devproc.h
	emu/devsys.h
	emu/didebug.h
	emu/dibus.h
	emu/diexec.h
	emu/driver.h
	emu/engine.h
	emu/list.h
	emu/machine.h
	emu/templates.h
	emu/sysconfig.h
	emu/syslist.h
	system/dec/axp/externs.h
	system/dec/axp/alphapc.h
	system/dec/axp/tsunami.h
	system/dec/vax/externs.h
	system/dec/vax/ka650.h
	system/dec/vax/ka655.h
)

add_definitions(-DDEBUG)
add_executable(mse ${MSE_CPP_SRCS} ${MSE_H_SRCS})
target_link_libraries(mse
	fmt::fmt
)