set(MSE_CPP_SRCS
	dev/bus/axp/21174.cpp
	dev/bus/axp/21272.cpp
	dev/bus/pci/pci.cpp
	dev/cpu/alpha/axp.cpp
	dev/cpu/alpha/axp_tb.cpp
	dev/cpu/alpha/axp_mem.cpp
	dev/cpu/alpha/debug.cpp
	dev/cpu/alpha/ev4.cpp
	dev/cpu/alpha/ev4_pal.cpp
	dev/cpu/alpha/ev5.cpp
	dev/cpu/alpha/ev5_pal.cpp
	dev/cpu/alpha/ev6.cpp
	dev/cpu/alpha/ev6_ipr.cpp
	dev/cpu/alpha/ev6_pal.cpp
	dev/cpu/alpha/execute.cpp
	dev/cpu/alpha/load.cpp
	dev/cpu/alpha/opcodes.cpp
	dev/cpu/i8080/i8080.cpp
	dev/cpu/i8080/debug.cpp
	dev/cpu/i8080/execute.cpp
	dev/cpu/m6500/m6500.cpp
	dev/cpu/mcs48/debug.cpp
	dev/cpu/mcs48/execute.cpp
	dev/cpu/mcs48/load.cpp
	dev/cpu/mcs48/mcs48.cpp
	dev/cpu/mcs48/opcodes.cpp
	dev/cpu/pdp10/pdp10.cpp
	dev/cpu/pdp11/pdp11.cpp
	dev/cpu/upd7810/debug.cpp
	dev/cpu/upd7810/execute.cpp
	dev/cpu/upd7810/load.cpp
	dev/cpu/upd7810/upd7810.cpp
#	dev/cpu/upd7810/opcodes.cpp
	dev/cpu/vax/vax.cpp
	emu/map/addrmap.cpp
	emu/map/busmgr.cpp
	emu/map/hedr0.cpp
	emu/map/hedr1.cpp
	emu/map/hedr2.cpp
	emu/map/hedr3.cpp
#	emu/map/hedr4.cpp
#	emu/map/hedr5.cpp
#	emu/map/hedr6.cpp
#	emu/map/hedr7.cpp
	emu/map/hedw0.cpp
	emu/map/hedw1.cpp
	emu/map/hedw2.cpp
	emu/map/hedw3.cpp
#	emu/map/hedw4.cpp
#	emu/map/hedw5.cpp
#	emu/map/hedw6.cpp
#	emu/map/hedw7.cpp
	emu/map/hem.cpp
	emu/map/heun.cpp
	emu/map/map.cpp
	emu/map/space.cpp
	emu/command.cpp
	emu/console.cpp
	emu/debug.cpp
	emu/delegate.cpp
	emu/device.cpp
	emu/devproc.cpp
	emu/devsys.cpp
	emu/dibus.cpp
	emu/didebug.cpp
	emu/diexec.cpp
	emu/engine.cpp
	emu/fileio.cpp
	emu/machine.cpp
	emu/romloader.cpp
	emu/sysconfig.cpp
	emu/syslist.cpp
	emu/systems.cpp
	main/main.cpp
	printers/epson/mx.cpp
	system/dec/axp/alphapc.cpp
	system/dec/axp/tsunami.cpp
	system/dec/vax/ka650.cpp
	system/dec/vax/ka655.cpp
	terminals/dec/vt100.cpp
)

set(MSE_H_SRCS
	dev/bus/axp/21174.h
	dev/bus/axp/21272.h
	dev/bus/pci/pci.h
	dev/cpu/alpha/axp.h
	dev/cpu/alpha/axp_arith.h
	dev/cpu/alpha/axp_branch.h
	dev/cpu/alpha/axp_bwx.h
	dev/cpu/alpha/axp_logical.h
	dev/cpu/alpha/axp_mem.h
	dev/cpu/alpha/axp_misc.h
	dev/cpu/alpha/axp_pal.h
	dev/cpu/alpha/debug.h
	dev/cpu/alpha/ev4.h
	dev/cpu/alpha/ev5.h
	dev/cpu/alpha/ev5_ipr.h
	dev/cpu/alpha/ev6.h
	dev/cpu/alpha/ev6_ipr.h
	dev/cpu/alpha/opcode.h
	dev/cpu/i8080/i8080.h
	dev/cpu/m6500/m6500.h
	dev/cpu/mcs48/mcs48.h
	dev/cpu/pdp10/pdp10.h
	dev/cpu/pdp11/pdp11.h
	dev/cpu/upd7810/upd7810.h
	dev/cpu/vax/vax.h
	emu/map/addrmap.h
	emu/map/he.h
	emu/map/hea.h
	emu/map/hedr.h
	emu/map/hedw.h
	emu/map/hem.cpp
	emu/map/map.h
	emu/command.h
	emu/console.h
	emu/core.h
	emu/debug.h
	emu/delegate.h
	emu/device.h
	emu/devproc.h
	emu/devsys.h
	emu/didebug.h
	emu/dibus.h
	emu/diexec.h
	emu/driver.h
	emu/engine.h
	emu/list.h
	emu/machine.h
	emu/romloader.h
	emu/templates.h
	emu/sysconfig.h
	emu/syslist.h
	printers/epson/externs.h
	printers/epson/mx.h
	system/dec/axp/externs.h
	system/dec/axp/alphapc.h
	system/dec/axp/tsunami.h
	system/dec/vax/externs.h
	system/dec/vax/ka650.h
	system/dec/vax/ka655.h
	terminals/dec/vt100.h
)

add_definitions(-DDEBUG)
add_executable(mse ${MSE_CPP_SRCS} ${MSE_H_SRCS})
target_link_libraries(mse
	fmt::fmt
)